k8s/deployment.yaml
apiVersion: "apps/v1beta1"
kind: "Deployment"
metadata:
  name: "barista-gke"
  namespace: "default"
  labels:
    app: "barista"
spec:
  progressDeadlineSeconds: 160
  selector:
    matchLabels:
      app: "barista"
  replicas: 2
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: "barista"
    spec:
      containers:
        - name: "barista-gke"
          image: "gcr.io/PROJECT_ID/IMAGE:TAG"
          imagePullPolicy: "Always"
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: "config-volume"
              mountPath: "/app/firebase-service-account.json"
              subPath: "firebase-service-account.json"
            - name: "keystore-volume"
              mountPath: "/app/keystore.p12"
              subPath: "keystore.p12"
      volumes:
        - name: "config-volume"
          secret:
            secretName: "firebase-service-account"
        - name: "keystore-volume"
          secret:
            secretName: "keystore"
