k8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "barista-gke"
spec:
  type: "LoadBalancer"
  selector:
    app: "barista"
  ports:
    - port: 80
      targetPort: 8080
      protocol: "TCP"
