k8s/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "barista-gke-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "barista-gke-ingress-static-ip"
spec:
  tls:
    - secretName: "sslcerts"
  backend:
    serviceName: "barista-gke"
    servicePort: 443
